Move absolute buttons within todo div object further down to prevent overlap with description

--- a/src/style.css
+++ b/src/style.css
@@ -137,7 +137,7 @@ a {
 .todo-object.expanded {
     grid-template-rows: 1fr 1fr 1fr 3fr;
     grid-template-columns: 0.5fr 10fr;
-    height: 100%;
+    max-height: 6fr;
 }
 
 .priority-indicator {
@@ -196,18 +196,22 @@ a {
     visibility: hidden;
     height: 0;
     width: 0;
+    margin-bottom: 0;
 }
 
 .expanded .todo-description {
     visibility: visible;
-    height: auto;
     width: auto;
+    height: auto;
+    max-height: 3fr;
     grid-column: 2 / -1;
     grid-row: 4 / -1;
     background-color: #E0ECF8;
     border-bottom-right-radius: 15px;
     overflow: scroll;
     padding-top: 5px;
+    padding-bottom: 10px;
+    word-wrap: break-word;
 }
 
 .absolute {
